# display-hata

./: .env.example  .gitignore  CLAUDE.md  README.md  buttons.py  config.example.json  device.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  strava_auth.py  test_buttons.py
screens/: __init__.py  adsb.py  base.py  bf6.py  cpu.py  date.py  lan.py  map.py  satellites.py  smart_bikes.py  strava.py  weather.py
