[project]
name = "display-hata"
version = "1.0.0"
description = "Little ambient info panel on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "luma.oled",
    "psutil",
    "httpx>=0.28.1",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "luma.emulator",
]
