[project]
name = "display-hata"
version = "1.0.0"
description = "Little ambient info panel on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "luma.oled",
    "psutil",
    "httpx>=0.28.1",
    "python-dotenv",
    "RPi.GPIO; platform_machine == 'aarch64' or platform_machine == 'armv6l' or platform_machine == 'armv7l'",
    "spidev; platform_machine == 'aarch64' or platform_machine == 'armv6l' or platform_machine == 'armv7l'",
]

[project.optional-dependencies]
dev = [
    "luma.emulator",
]

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
explicit = true

[tool.uv.sources]
pillow = [
    { index = "piwheels", marker = "platform_machine == 'armv6l' or platform_machine == 'armv7l'" },
]
